# QtFileExplorer

./: .gitignore  CMakeLists.txt  Common.hpp  Controller.cpp  Controller.hpp  Explorer.cpp  Explorer.hpp  History.cpp  MainWindow.qml  main.cpp
Diagrams/: Class_diagram.drawio  Component_diagram.drawio
Explorer/: Explorer.cpp  Explorer.hpp  ExplorerData.hpp  File.cpp  FileIconProvider.cpp  FileIconProvider.hpp
Explorer/File/: File.cpp  File.hpp  FileIconProvider.cpp  FileIconProvider.hpp
Explorer/History/: History.hpp
TasksManager/Task/: CopyFilesTask.cpp  CopyFilesTask.hpp  DeleteFilesTask.cpp  DeleteFilesTask.hpp  MoveFilesTask.cpp  MoveFilesTask.hpp  Task.cpp  Task.hpp  TaskData.hpp
qml/: CButton.qml  CLabel.qml  FilesView.qml  InputDialog.qml  MainWindow.qml  ProgressView.qml  utils.js
qml/Dialogs/: InputDialog.qml
qml/Dialogs/PropertiesDialogs/: DriverPropertiesDialog.qml  FilePropertiesDialog.qml  FolderPropertiesDialog.qml
qml/ProgressView/: ProgressView.qml
src/: Controller.cpp  Controller.hpp  main.cpp
src/Explorer/: Explorer.cpp  Explorer.hpp  ExplorerData.hpp  IconProvider.cpp  IconProvider.hpp
src/Explorer/File/: File.cpp  File.hpp
src/Explorer/FileInfo/: BaseFileInfo.cpp  BaseFileInfo.hpp  FullFileInfo.cpp  FullFileInfo.hpp
src/Explorer/History/: History.cpp  History.hpp
src/TasksManager/: TasksManager.cpp  TasksManager.hpp
src/TasksManager/Task/: CopyFilesTask.cpp  DeleteFilesTask.cpp  DeleteFilesTask.hpp  Task.cpp
